--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "eject": "react-scripts eject",
         "build-lib": "npm-run-all clean-lib compile-lib-script copy-files-to-lib",
         "clean-lib": "rimraf ./lib",
+        "do-publish": "npm publish",
         "patch": "npm version patch",
         "patchit": "npm-run-all build-lib patch do-publish",
         "compile-lib-script": "tsc -p tsconfig-build-lib.json",
