--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@navikt/fp-common",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "scripts": {
         "start": "craco start",
         "test": "react-scripts test",
@@ -44,7 +44,8 @@
     "peerDependencies": {
         "intl": "^1.2.5",
         "react": "^16.12.0 || ^17.0.0",
-        "react-intl": "^5.4.5"
+        "react-intl": "^5.4.5",
+        "react-scripts": "^4.x"
     },
     "eslintConfig": {
         "extends": [
