--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "@navikt/fp-common",
     "version": "1.0.4",
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
     "scripts": {
         "start": "craco start",
         "test": "react-scripts test",
