Lagt til Step komponent med avhengigheter

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "copy-files-to-lib": "copyfiles -u 2 \"src/common/**/*.less\" lib/ && copyfiles -u 2 \"src/common/**/*.json\" lib/"
     },
     "dependencies": {
+        "@navikt/sif-common-formik": "^13.0.7",
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.5.0",
@@ -26,10 +27,19 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^16.9.10",
         "classnames": "^2.2.6",
+        "history": "^5.0.0",
+        "nav-datovelger": "^9.0.1",
         "nav-frontend-chevron": "^1.0.21",
         "nav-frontend-chevron-style": "^0.3.10",
         "nav-frontend-core": "^5.0.10",
+        "nav-frontend-js-utils": "^1.0.15",
+        "nav-frontend-knapper": "^2.0.24",
+        "nav-frontend-knapper-style": "^1.0.11",
+        "nav-frontend-lenker": "^1.0.53",
         "nav-frontend-lenker-style": "^0.2.39",
+        "nav-frontend-modal": "^1.0.55",
+        "nav-frontend-modal-style": "^0.3.46",
+        "nav-frontend-stegindikator": "^0.0.65",
         "nav-frontend-typografi": "^2.0.20",
         "nav-frontend-typografi-style": "^1.0.26",
         "react": "^17.0.1",
