--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^16.9.10",
         "classnames": "^2.2.6",
+        "dayjs": "^1.10.4",
         "history": "^5.0.0",
         "nav-datovelger": "^9.0.1",
         "nav-frontend-chevron": "^1.0.21",
@@ -44,6 +45,7 @@
         "nav-frontend-typografi-style": "^1.0.26",
         "react": "^17.0.1",
         "react-aria-menubutton": "^7.0.0",
+        "react-dayjs": "^0.2.1",
         "react-dom": "^17.0.1",
         "react-intl": "^5.10.6",
         "react-scripts": "4.0.1",
