--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "nav-frontend-typografi-style": "^1.0.26",
         "react": "^17.0.1",
         "react-aria-menubutton": "^7.0.0",
+        "react-collapse": "^5.1.0",
         "react-dom": "^17.0.1",
         "react-intl": "^5.10.6",
         "react-scripts": "4.0.1",
@@ -54,6 +55,7 @@
         "@craco/craco": "^6.0.0",
         "@types/classnames": "^2.2.11",
         "@types/react-aria-menubutton": "^6.2.7",
+        "@types/react-collapse": "^5.0.0",
         "copyfiles": "^2.4.1",
         "craco-less": "^1.17.1",
         "npm-run-all": "^4.1.5"
