--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "dependencies": {
         "@navikt/fnrvalidator": "^1.3.0",
         "@navikt/sif-common-formik": "^23.1.0",
-        "@testing-library/jest-dom": "^5.11.6",
-        "@testing-library/react": "^11.2.2",
-        "@testing-library/user-event": "^12.5.0",
-        "@types/jest": "^26.0.19",
-        "@types/node": "^12.19.8",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^16.9.10",
-        "classnames": "^2.2.6",
-        "dayjs": "^1.10.4",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.4.1",
+        "@types/jest": "^28.1.6",
+        "@types/node": "^18.6.3",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "classnames": "^2.3.1",
+        "dayjs": "^1.11.4",
         "formik": "^2.2.9",
-        "history": "^5.0.0",
-        "nav-datovelger": "^12.1.2",
+        "history": "^5.3.0",
+        "nav-datovelger": "^12.5.0",
         "nav-frontend-alertstriper": "^4.0.1",
         "nav-frontend-alertstriper-style": "^3.0.1",
         "nav-frontend-chevron": "^1.0.30",
@@ -60,31 +60,30 @@
         "nav-frontend-stegindikator-style": "^2.0.1",
         "nav-frontend-typografi": "^4.0.1",
         "nav-frontend-typografi-style": "^2.0.1",
-        "react": "^16.12.0 || ^17.0.0",
-        "react-aria-menubutton": "^7.0.0",
-        "react-collapse": "^5.1.0",
-        "react-day-picker": "^7.4.10",
-        "react-dom": "^17.0.1",
+        "react": "^17.0.0 || ^18.0.0",
+        "react-aria-menubutton": "^7.0.3",
+        "react-collapse": "^5.1.1",
+        "react-day-picker": "^8.0.7",
+        "react-dom": "^18.2.0",
         "react-intl": "^5.4.5",
-        "react-modal": "^3.14.3",
-        "react-router-dom": "^6.2.2",
-        "react-scripts": "^4.x",
-        "typescript": "^4.1.2"
+        "react-modal": "^3.15.1",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "^5.0.1",
+        "typescript": "^4.7.4"
     },
     "devDependencies": {
-        "@craco/craco": "^6.0.0",
-        "@types/classnames": "^2.2.11",
-        "@types/react-aria-menubutton": "^6.2.7",
-        "@types/react-collapse": "^5.0.0",
+        "@craco/craco": "^6.4.5",
+        "@types/classnames": "^2.3.1",
+        "@types/react-aria-menubutton": "^6.2.9",
+        "@types/react-collapse": "^5.0.1",
         "copyfiles": "^2.4.1",
-        "craco-less": "^1.17.1",
+        "craco-less": "^2.0.0",
         "npm-run-all": "^4.1.5"
     },
     "peerDependencies": {
         "intl": "^1.2.5",
-        "react": "^16.12.0 || ^17.0.0",
-        "react-intl": "^5.4.5",
-        "react-scripts": "^4.x"
+        "react": "^17.0.0 || ^18.0.0",
+        "react-intl": "^5.4.5"
     },
     "files": [
         "package.json",
