--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "peerDependencies": {
         "intl": "^1.2.5",
         "react": "^17.0.0 || ^18.0.0",
-        "react-intl": "^5.4.5"
+        "react-intl": "^5.4.5 || ^6.x"
     },
     "files": [
         "package.json",
