--- a/package.json
+++ b/package.json
@@ -65,11 +65,11 @@
         "react-collapse": "^5.1.1",
         "react-day-picker": "^8.0.7",
         "react-dom": "^18.2.0",
-        "react-intl": "^5.4.5",
         "react-modal": "^3.15.1",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.1",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "react-intl": "^6.0.5"
     },
     "devDependencies": {
         "@craco/craco": "^6.4.5",
@@ -83,7 +83,7 @@
     "peerDependencies": {
         "intl": "^1.2.5",
         "react": "^17.0.0 || ^18.0.0",
-        "react-intl": "^5.4.5 || ^6.x"
+        "react-intl": "^6.0.5"
     },
     "files": [
         "package.json",
