--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
     "scripts": {
-        "start": "craco start",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook",
         "build-lib": "npm-run-all clean-lib compile-lib-script copy-files-to-lib",
         "clean-lib": "rimraf ./lib",
         "do-publish": "npm publish",
@@ -22,67 +24,65 @@
     "dependencies": {
         "@navikt/fnrvalidator": "^1.3.0",
         "@navikt/sif-common-formik": "^23.1.0",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.3.0",
-        "@testing-library/user-event": "^14.4.1",
-        "@types/jest": "^28.1.6",
-        "@types/node": "^18.6.3",
-        "@types/react": "^18.0.15",
+        "@types/node": "^18.6.4",
+        "@types/react": "^18.0.16",
         "@types/react-dom": "^18.0.6",
         "classnames": "^2.3.1",
+        "date-fns": "^2.29.1",
         "dayjs": "^1.11.4",
         "formik": "^2.2.9",
         "history": "^5.3.0",
-        "nav-datovelger": "^12.5.0",
-        "nav-frontend-alertstriper": "^4.0.1",
-        "nav-frontend-alertstriper-style": "^3.0.1",
+        "nav-datovelger": "^12.6.0",
+        "nav-frontend-alertstriper": "^4.0.2",
+        "nav-frontend-alertstriper-style": "^3.0.2",
         "nav-frontend-chevron": "^1.0.30",
         "nav-frontend-chevron-style": "^1.0.4",
         "nav-frontend-core": "^6.0.1",
-        "nav-frontend-hjelpetekst": "^3.1.2",
-        "nav-frontend-hjelpetekst-style": "^3.0.1",
+        "nav-frontend-hjelpetekst": "^3.1.3",
+        "nav-frontend-hjelpetekst-style": "^3.0.2",
         "nav-frontend-ikoner-assets": "^3.0.1",
         "nav-frontend-js-utils": "^1.0.20",
-        "nav-frontend-knapper": "^3.1.2",
-        "nav-frontend-knapper-style": "^2.1.1",
-        "nav-frontend-lenker": "^2.0.1",
-        "nav-frontend-lenker-style": "^2.0.1",
-        "nav-frontend-lukknapp": "^2.0.1",
-        "nav-frontend-lukknapp-style": "^2.0.1",
-        "nav-frontend-modal": "^2.0.1",
-        "nav-frontend-modal-style": "^2.0.1",
-        "nav-frontend-paneler-style": "^2.0.1",
-        "nav-frontend-popover": "^2.0.3",
-        "nav-frontend-popover-style": "^2.0.1",
-        "nav-frontend-skjema": "^4.0.5",
-        "nav-frontend-skjema-style": "^3.0.2",
-        "nav-frontend-stegindikator": "^2.0.2",
-        "nav-frontend-stegindikator-style": "^2.0.1",
-        "nav-frontend-typografi": "^4.0.1",
-        "nav-frontend-typografi-style": "^2.0.1",
-        "react": "^17.0.0 || ^18.0.0",
+        "nav-frontend-knapper": "^3.1.3",
+        "nav-frontend-knapper-style": "^2.1.2",
+        "nav-frontend-lenker": "^2.0.2",
+        "nav-frontend-lenker-style": "^2.0.2",
+        "nav-frontend-lukknapp": "^2.0.2",
+        "nav-frontend-lukknapp-style": "^2.0.2",
+        "nav-frontend-modal": "^2.0.2",
+        "nav-frontend-modal-style": "^2.0.2",
+        "nav-frontend-paneler-style": "^2.0.2",
+        "nav-frontend-popover": "^2.0.4",
+        "nav-frontend-popover-style": "^2.0.2",
+        "nav-frontend-skjema": "^4.0.6",
+        "nav-frontend-skjema-style": "^3.0.3",
+        "nav-frontend-stegindikator": "^2.0.3",
+        "nav-frontend-stegindikator-style": "^2.0.2",
+        "nav-frontend-typografi": "^4.0.2",
+        "nav-frontend-typografi-style": "^2.0.2",
+        "react": "^18.2.0",
         "react-aria-menubutton": "^7.0.3",
         "react-collapse": "^5.1.1",
         "react-day-picker": "^8.0.7",
         "react-dom": "^18.2.0",
+        "react-intl": "^6.0.5",
         "react-modal": "^3.15.1",
         "react-router-dom": "^6.3.0",
-        "react-scripts": "^5.0.1",
-        "typescript": "^4.7.4",
-        "react-intl": "^6.0.5"
+        "typescript": "^4.7.4"
     },
     "devDependencies": {
-        "@craco/craco": "^6.4.5",
+        "@originjs/vite-plugin-commonjs": "^1.0.3",
+        "@storybook/builder-vite": "^0.2.2",
         "@types/classnames": "^2.3.1",
         "@types/react-aria-menubutton": "^6.2.9",
         "@types/react-collapse": "^5.0.1",
         "copyfiles": "^2.4.1",
-        "craco-less": "^2.0.0",
-        "npm-run-all": "^4.1.5"
+        "less": "^4.1.3",
+        "npm-run-all": "^4.1.5",
+        "vite": "^3.0.4"
     },
     "peerDependencies": {
         "intl": "^1.2.5",
-        "react": "^17.0.0 || ^18.0.0",
+        "react": "^18.0.0",
         "react-intl": "^6.0.5"
     },
     "files": [
