Fikset less issues og commonjs requires

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "bumpit": "npm-run-all build-lib minor do-publish",
         "major": "npm version major",
         "breakit": "npm-run-all build-lib major do-publish",
+        "postinstall": "sh ./extensionify-less.sh",
         "compile-lib-script": "tsc -p tsconfig-build-lib.json",
         "copy-files-to-lib": "copyfiles -u 2 \"src/common/**/*.less\" lib/ && copyfiles -u 2 \"src/common/**/*.json\" lib/"
     },
@@ -50,6 +51,7 @@
         "nav-frontend-lukknapp-style": "^2.0.2",
         "nav-frontend-modal": "^2.0.2",
         "nav-frontend-modal-style": "^2.0.2",
+        "nav-frontend-paneler": "^2.0.2",
         "nav-frontend-paneler-style": "^2.0.2",
         "nav-frontend-popover": "^2.0.4",
         "nav-frontend-popover-style": "^2.0.2",
@@ -59,10 +61,10 @@
         "nav-frontend-stegindikator-style": "^2.0.2",
         "nav-frontend-typografi": "^4.0.2",
         "nav-frontend-typografi-style": "^2.0.2",
-        "react": "^18.2.0",
+        "react": "^18.0.0",
         "react-aria-menubutton": "^7.0.3",
         "react-collapse": "^5.1.1",
-        "react-day-picker": "^8.0.7",
+        "react-day-picker": "^7.4.10",
         "react-dom": "^18.2.0",
         "react-intl": "^6.0.5",
         "react-modal": "^3.15.1",
