--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
         "copyfiles": "^2.4.1",
         "less": "^4.1.3",
         "npm-run-all": "^4.1.5",
-        "vite": "^3.0.4"
+        "vite": "^3.0.4",
+        "vite-plugin-checker": "^0.4.9"
     },
     "peerDependencies": {
         "intl": "^1.2.5",
