--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "nav-datovelger": "^12.6.0",
         "nav-frontend-core": "^6.0.1",
         "nav-frontend-js-utils": "^1.0.20",
+        "nav-frontend-knapper-style": "^2.1.2",
+        "nav-frontend-skjema-style": "^3.0.3",
         "nav-frontend-stegindikator": "^2.0.3",
         "nav-frontend-stegindikator-style": "^2.0.2",
         "nav-frontend-typografi-style": "^2.0.2",
